# crypto-tray

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  Taskfile.yml  app.go  callbacks.go  go.mod  go.sum  init.go  main.go  main_bindings.go  package.json  pnpm-lock.yaml  startup.go  vite.config.ts  wails.json
autostart/: autostart.go
config/: config.go  manager.go  types.go  validation.go
events/: events.go
exchange/: converter.go  fetcher.go  service.go  types.go
frontend/: index.html  package-lock.json  package.json  package.json.md5  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts
movement/: tracker.go  types.go
price/: fetcher.go  service.go  types.go
providers/: binance.go  binance_symbols.go  binance_types.go  coingecko.go  coingecko_types.go  provider.go  registry.go  types.go
services/: app_config.go  app_service.go  formatter.go  httpclient.go
src/: style.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  error.rs  lib.rs  main.rs
src-tauri/src/config/: manager.rs  types.rs
src-tauri/src/exchange/: converter.rs  fetcher.rs  mod.rs  types.rs
src-tauri/src/movement/: mod.rs  tracker.rs  types.rs
src-tauri/src/providers/: binance.rs  coingecko.rs  mod.rs  registry.rs  traits.rs  types.rs
src-tauri/src/services/: formatter.rs  mod.rs  price_service.rs
src-tauri/src/tray/: icon.rs  mod.rs
tauri/: index.html  package.json  pnpm-lock.yaml
tray/: manager.go  menu.go  (+5 more)
(+164 files in other folders)
