[package]
name = "crypto-tray"
version = "0.1.0"
description = "Cryptocurrency price tracker for system tray"
authors = ["Andy Nguyen"]
edition = "2021"

[lib]
name = "crypto_tray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"
auto-launch = "0.6"
dirs = "6"
async-trait = "0.1"
num-format = "0.4"
